@@ -1,10 +1,9 @@
 import urllib,re,sys,os
 import xbmc, xbmcgui, xbmcaddon, xbmcplugin
-import main
 import BeautifulSoup
 import simplejson as json
 
-from resources.libs import settings , constants
+from resources.libs import main, settings , constants, jsonutil, fileutil
 addon_id = settings.getAddOnID()
 
 selfAddon = xbmcaddon.Addon(id=addon_id)
